# ChangeLog for net-mail/mailutils
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/mailutils/ChangeLog,v 1.45 2011/03/20 13:06:34 eras Exp $

  20 Mar 2011; Eray Aslan <eras@gentoo.org> -mailutils-1.2.ebuild,
  -mailutils-2.1.ebuild:
  remove old versions.

*mailutils-2.2 (10 Sep 2010)

  10 Sep 2010; Jeroen Roovers <jer@gentoo.org> +mailutils-2.2.ebuild:
  Version bump.

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> mailutils-0.6-r3.ebuild,
  mailutils-1.2.ebuild, mailutils-2.1.ebuild:
  Migrating away from deprecated postgres virtuals

  25 Jan 2010; Jeroen Roovers <jer@gentoo.org> mailutils-2.1.ebuild,
  metadata.xml:
  Add ldap and tokyocabinet USE flags.

  24 Jan 2010; Jeroen Roovers <jer@gentoo.org> mailutils-2.1.ebuild:
  USE=bidi support thanks to Martin von Gagern (bug #261155).

  21 Jan 2010; Jeroen Roovers <jer@gentoo.org> mailutils-2.1.ebuild:
  Actually do something with the python eclass too.

*mailutils-2.1 (21 Jan 2010)

  21 Jan 2010; Jeroen Roovers <jer@gentoo.org> +mailutils-2.1.ebuild,
  +files/mailutils-2.1-python.patch:
  Version bump thanks to Arfrever Frehtes Taifersar Arahesis (bug #252749).

  16 Mar 2009; Thilo Bangert <bangert@gentoo.org> mailutils-0.6-r3.ebuild,
  mailutils-1.2.ebuild:
  add blocker on mail-filter/libsieve due to filecollision - bug #248097

  15 Feb 2009; Torsten Veller <tove@gentoo.org> mailutils-0.6-r3.ebuild,
  mailutils-1.2.ebuild:
  Remove mail-client/elm blocker as elm was removed

  15 Jul 2008; Ryan Hill <dirtyepic@gentoo.org> mailutils-0.6-r3.ebuild,
  mailutils-1.2.ebuild:
  Add test USE flag with dependency on dejagnu for part of bug #172970 by
  James Rowe.

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org>
  mailutils-0.6-r3.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

  19 May 2008; Tiziano Müller <dev-zero@gentoo.org> mailutils-1.2.ebuild: